# ucapcan-voise

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  comparison.eps  compile-cpp.sh  configure  configure.ac
cpp/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml
cpp/doc/html/: NSStar_8cpp.html  NSStar_8h_source.html  addSeedToVDBatch_8cpp.html  addSeedToVD_8cpp.html  addSeed_8cpp.html  addSeed_8h.html  addSeed_8h_source.html  annotated.html  arrayPosInVector_8h.html  arrayPosInVector_8h_source.html  bruteForceCheckLambda_8cpp.html  bruteForceCheckLambda_8h.html  bruteForceCheckLambda_8h_source.html  bruteForceCheckV_8cpp.html  bruteForceCheckV_8h.html  bruteForceCheckV_8h_source.html  circumcentre_8h.html  circumcentre_8h_source.html  classSKIZException.html  classSKIZIOException.html  classSKIZIdenticalSeedsException.html  classSKIZIndexException.html  classSKIZLinearSeedsException.html  classSKIZProposition2Exception.html  classes.html  classvd.html  dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  formula.repository  (+111 more)
cpp/html/: NSStar_8cpp.html  NSStar_8h.html  NSStar_8h_source.html  addSeedToVDBatch_8cpp.html  addSeedToVD_8cpp.html  addSeed_8cpp.html  addSeed_8h.html  addSeed_8h_source.html  annotated.html  circumcentre_8h.html  circumcentre_8h_source.html  classSKIZException.html  classSKIZIOException.html  classSKIZIdenticalSeedsException.html  classSKIZIndexException.html  classSKIZLinearSeedsException.html  classes.html  classvd.html  dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_291f725ec8cfce0e94c56efa2c6c15e3.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c1d4644b987a6b7985830a0b6a8b3530.html  dir_c6a8403601c24848571ea2a73ccd640b.html  dir_c91047de5de844d69782fa6abbba4625.html  files.html  formula.repository  functions.html  functions_func.html  getCentroidSeedBatch_8cpp.html  getCentroid_8cpp.html  getCentroid_8h_source.html  getOp_8cpp.html  getOp_8h_source.html  getRegion_8cpp.html  getRegion_8h.html  getRegion_8h_source.html  getVDOp_8cpp.html  getVDOp__old_8cpp.html  (+86 more)
cpp/latex/: Makefile  NSStar_8cpp.tex  NSStar_8h.tex  addSeedToVDBatch_8cpp.tex  addSeedToVD_8cpp.tex  addSeed_8cpp.tex  addSeed_8h.tex  annotated.tex  circumcentre_8h.tex  classSKIZException.eps  classSKIZException.tex  classSKIZIOException.tex  classSKIZIdenticalSeedsException.tex  classSKIZIndexException.eps  classSKIZIndexException.tex  classSKIZLinearSeedsException.eps  classSKIZLinearSeedsException.tex  classvd.tex  files.tex  getCentroidSeedBatch_8cpp.tex  getCentroid_8cpp.tex  getOp_8cpp.tex  getRegion_8cpp.tex  getRegion_8h.tex  getVDOp_8cpp.tex  getVDOp__old_8cpp.tex  grabVD_8cpp.tex  grabVD_8h.tex  grabW_8cpp.tex  grabW_8h.tex  group__RealVec.tex  group__addSeedToVD.tex  group__addSeedToVDBatch.tex  group__circumcentre.aux  group__circumcentre.tex  group__getCentroid.tex  group__getCentroidSeedBatch.tex  group__getRegion.aux  group__getRegion.tex  group__getVDOp.tex  (+68 more)
cpp/other/: mainpage-info.txt
cpp/report/: bibfile.bib  report.aux  report.bbl  report.blg  report.dvi  report.tex  report.toc
cpp/src/: NSStar.cpp  addSeed.cpp  addSeed.h  getCentroid.cpp  getCentroid.h  getOp.cpp  getOp.h  getRegion.cpp  getRegion.h  main.cpp  pointInRegion.cpp  pointInRegion.h  removeSeed.cpp  removeSeed.h  removeSeedBackup.cpp  skizException.cpp  skizException.h  typedefs.h  vd.cpp  vd.h
matlab/: .matlab7rc.sh.swp  CMakeLists.txt  H.m  Makefile.am  Makefile.in  Nk.mat  VD.Vk.lambda  VD.mat  VD2AdjacencyMatrix.m  VD2GraphMatrices.m  VD2GraphViz.m  VD89.mat  VDNew.mat  VDOld.mat  VDexample.m  VDr-fast.Sk  VOISE.m  VOISEf.m  W.mat  aamextest_live.m  addSeedToVD.cpp  addSeedToVD.cpp.orig  addSeedToVD.m  addSeedToVD.mexa64  addSeedToVD2.m  addSeedToVDBatch.cpp  addSeedToVDBatch.mexa64  addSeedToVDFast.m  addSeedsToVR.m  ann.m  batchSizeBench.m  benchVD.m  benchVD.m~  benchVDLambda.txt  benchVDNk512.mat  boardSeeds.m  checkVD.m  checks.m  checks.m~  cmpHSTSpiceTimeDelays.m  (+125 more)
matlab/cpp/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  NSStar.cpp  NSStar.h  addSeed.cpp  addSeed.h  aux.cpp  aux.cpp.orig  aux.h  getRegion.cpp  getRegion.cpp.orig  getRegion.h  grabVD.cpp  grabVD.h  main.cpp  pointInRegion.cpp  pointInRegion.h  pushVD.cpp  pushVD.h  removeSeed.cpp  removeSeed.cpp.orig  removeSeed.h  skizException.cpp  skizException.cpp.orig  skizException.h  typedefs.cpp  vd.cpp  vd.h  vd.h.orig
matlab/imageUtils/: ScharrFilter.m  SobelFilter.m  filterImage.m  histEq.m  nagaoMatsuyama.m  startup.m
matlab/limbFit/: ApplyConicFit.m  EllipseDirectFit.m  EllipseFitByTaubin.m  allAngles.m  circle2.m  dcircle2.m  dellipse2.m  dellipse3.m  dellipse4.m  dfdp.m  disc.m  ellipse2.m  ellipse3.m  ellipse4.m  ellipse_fit.m  ex2Angles.m  fitCircle2.m  fitEllipse2.m  fitLimb2.m  gander94fig1.m  gander94fig4.m  gander94figs23.m  getCircleParams.m  getDefaultFitParams.m  getDiscCenter.m  getEllipseParams.m  getLimb2.m  getOptimalCorrel.m  getPolePos.m  jacLimbModel2.m  leasqr.m  limbFitEx1.m  limbFitEx2.m  limbModel.m  limbModel2.m  plotLimbFit.m  plotSelectedSeeds.m  plotSelectedSeeds2.m  selectSector.m  selectSeeds.m  (+4 more)
matlab/profile_results/: file0.html  file1.html  file10.html  file100.html  file101.html  file102.html  file103.html  file104.html  file105.html  file106.html  file107.html  file108.html  file109.html  file11.html  file110.html  file111.html  file112.html  file113.html  file114.html  file115.html  file116.html  file117.html  file118.html  file119.html  file12.html  file120.html  file121.html  file122.html  file123.html  file124.html  file125.html  file126.html  file127.html  file128.html  file129.html  file13.html  file130.html  file131.html  file132.html  file133.html  (+832 more)
matlab/visUtils/: computeJupiterAxis.m  computePlanetAxis.m  computeSaturnAxis.m  computeUranusAxis.m  getPlanetGeometry.m  getPlanetRings.m  ltc.m  moonphase.m  plotJupiterGrid.m  plotPlanetGrid.m  plotSaturnGrid.m  plotUranusGrid.m
mcc/: Makefile  Makefile.am  Makefile.in  README
(+512 files in other folders)
